--- a/Package/ToSicCre8magic.Theme.Basic01.nuspec
+++ b/Package/ToSicCre8magic.Theme.Basic01.nuspec
@@ -5,7 +5,7 @@
         <version>1.0.0</version>
         <authors>ToSicCre8magic</authors>
         <owners>ToSicCre8magic</owners>
-        <title>Basic01</title>
+        <title>Basic</title>
         <description>[Description]</description>
         <copyright>ToSicCre8magic</copyright>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
