--- a/Client/ToSicCre8magic.Theme.Basic.Client.csproj
+++ b/Client/ToSicCre8magic.Theme.Basic.Client.csproj
@@ -25,12 +25,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.5" />
+    <PackageReference Include="Oqtane.Client" Version="6.1.3" />
+    <PackageReference Include="Oqtane.Shared" Version="6.1.3" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <Reference Include="Oqtane.Client"><HintPath>..\..\oqtane.framework\Oqtane.Server\bin\Debug\net9.0\Oqtane.Client.dll</HintPath></Reference>
     <Reference Include="Oqtane.Shared"><HintPath>..\..\oqtane.framework\Oqtane.Server\bin\Debug\net9.0\Oqtane.Shared.dll</HintPath></Reference>
-  </ItemGroup>
+  </ItemGroup>-->
 
 	<Target Name="RunNpmInstallOrCi" BeforeTargets="Build" Condition="!Exists('node_modules')">
 		<Exec Command="if exist package-lock.json (npm ci) else (npm install)" />
