--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ToSicCre8magic-Theme-Basic",
+  "name": "ToSic.Cre8magic-Theme-Basic",
   "version": "01.00.00",
   "main": "(none)",
   "scripts": {
