--- a/Package/ToSic.Cre8magic.Theme.Basic.nuspec
+++ b/Package/ToSic.Cre8magic.Theme.Basic.nuspec
@@ -3,11 +3,11 @@
     <metadata>
         <id>$projectname$</id>
         <version>1.0.0</version>
-        <authors>ToSicCre8magic</authors>
-        <owners>ToSicCre8magic</owners>
+        <authors>ToSic.Cre8magic</authors>
+        <owners>ToSic.Cre8magic</owners>
         <title>Basic</title>
         <description>[Description]</description>
-        <copyright>ToSicCre8magic</copyright>
+        <copyright>ToSic.Cre8magic</copyright>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <license type="expression">MIT</license>
         <projectUrl>https://github.com/oqtane/oqtane.framework</projectUrl>
