--- a/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
+++ b/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
@@ -1,15 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Version>1.0.0</Version>
     <Authors>ToSic.Cre8magic</Authors>
-    <Company>ToSic.Cre8magic</Company>
-    <Description>[Description]</Description>
+    <Company>2sic internet solutions GmbH</Company>
+    <Description>A basic Bootstrap5 best-practices CSS-variables based theme</Description>
     <Product>ToSic.Cre8magic.Theme.Basic</Product>
-    <Copyright>ToSic.Cre8magic</Copyright>
+    <Copyright>2sic - MIT 2025</Copyright>
     <AssemblyName>ToSic.Cre8magic.Theme.Basic.Client.Oqtane</AssemblyName>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <RootNamespace>ToSic.Cre8magic.Theme.Basic</RootNamespace>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,11 +31,7 @@
     <PackageReference Include="Oqtane.Shared" Version="6.1.3" />
   </ItemGroup>
 
-  <!--<ItemGroup>
-    <Reference Include="Oqtane.Client"><HintPath>..\..\oqtane.framework\Oqtane.Server\bin\Debug\net9.0\Oqtane.Client.dll</HintPath></Reference>
-    <Reference Include="Oqtane.Shared"><HintPath>..\..\oqtane.framework\Oqtane.Server\bin\Debug\net9.0\Oqtane.Shared.dll</HintPath></Reference>
-  </ItemGroup>-->
-
+  <!-- Make sure node_modules exists, otherwise run npm ci-->
 	<Target Name="RunNpmInstallOrCi" BeforeTargets="Build" Condition="!Exists('node_modules')">
 		<Exec Command="if exist package-lock.json (npm ci) else (npm install)" />
 	</Target>
