develop binders to shorten settings code

--- a/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
+++ b/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
@@ -48,6 +48,7 @@
     <!-- there may be other elements here -->
     <BlazorWebAssemblyEnableLinking>false</BlazorWebAssemblyEnableLinking>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
