--- a/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
+++ b/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
@@ -14,6 +14,12 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>exclude</CompilerGeneratedFilesOutputPath>
+    <DefaultItemExcludes>$(DefaultItemExcludes);exclude\**\*</DefaultItemExcludes>
+  </PropertyGroup>
+
   <ItemGroup>
     <Content Remove="wwwroot\Themes\ToSic.Cre8magic.Theme.Basic\Theme.css" />
   </ItemGroup>
