update cre8magic transformer config name to cre8magic-transformer.config.json

--- a/cre8magic-transformer.config.json
+++ b/cre8magic-transformer.config.json
@@ -21,7 +21,7 @@
         "Package/",
         ".gitignore",
         "**/*.DotSettings",
-        "template-generator.config.json"
+        "cre8magic-transformer.config.json"
       ]
     },
     {
