--- a/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
+++ b/Client/ToSic.Cre8magic.Theme.Basic.Client.csproj
@@ -29,6 +29,10 @@
     <PackageReference Include="Oqtane.Shared" Version="6.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
   <!-- This target ensures that `node_modules` exists before building.
   If it doesn't exist, it checks for `package-lock.json` and runs `npm ci` (clean install),
   otherwise it falls back to `npm install`. -->
@@ -39,18 +43,14 @@
   <!--This target builds the frontend (e.g. compiles JS and SCSS via Vite) using `npm run build`.
   It only runs during the Release configuration.
   It depends on `RunNpmInstallOrCi` to ensure all dependencies are installed first.-->
-  <Target Name="BuildFrontend" BeforeTargets="Build"
-    DependsOnTargets="RunNpmInstallOrCi"
-    Condition="'$(Configuration)' == 'Release'">
+  <Target Name="BuildFrontend" BeforeTargets="Build" DependsOnTargets="RunNpmInstallOrCi" Condition="'$(Configuration)' == 'Release'">
     <Exec Command="npm run build" />
   </Target>
 
   <!-- This target runs the frontend development server (e.g. Vite's dev mode) using `npm run dev`.
   It only runs during the Debug configuration.
   It also depends on `RunNpmInstallOrCi` to ensure dependencies are available -->
-  <Target Name="BuildFrontendDebug" BeforeTargets="Build"
-    DependsOnTargets="RunNpmInstallOrCi"
-    Condition="'$(Configuration)' == 'Debug'">
+  <Target Name="BuildFrontendDebug" BeforeTargets="Build" DependsOnTargets="RunNpmInstallOrCi" Condition="'$(Configuration)' == 'Debug'">
     <Exec Command="npm run dev" />
   </Target>
 
